[package]
name = "hibachi-connect"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
once_cell = "1.18"
k256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"    # For SHA-256 hashing
hex = "0.4"      # For encoding hash to hex
